# musa5090s24-team1-cama

./: .pre-commit-config.yaml  README.md  package-lock.json
config/: DEPLOY.md  public-cors.json
docs/: CONTRIBUTING.md  SETUP.md
frontend/: package-lock.json
tasks/: .gitignore  .pre-commit-config.yaml  README.md  export_requirements.sh  pyproject.toml  requirements.txt
tasks/explore_phila_data/prepare_data/: main.py
tasks/src/: .env.yaml  .gitignore  BQ.md  DEPLOY.md  data-pipeline.yaml  phl-pwd-parcels-pipeline.yaml  requirements.txt  script.py
tasks/src/extract-data/extract-opa-assessments/: main.py
tasks/src/extract-data/extract-opa-properties/: main.py
tasks/src/extract-data/extract-pwd-parcels/: main.py
tasks/src/generate-assets/generate-geosjon/: main.py  requirements.txt
tasks/src/generate-assets/generate-property-map-tile-data/: Dockerfile  main.py  requirements.txt
tasks/src/generate_property_geojson/: index.mjs  main.py  requirements.txt
tasks/src/load-data/load-opa-assessments/: main.py
tasks/src/load-data/load-opa-properties/: main.py  requirements.txt
tasks/src/load-data/load-pwd-parcels/: main.py
tasks/src/prepare-data/prepare-opa-assessments/: main.py
tasks/src/prepare-data/prepare-opa-properties/: main.py
tasks/src/prepare-data/prepare-pwd-parcels/: main.py
tasks/src/prepare_data/: main.py
tasks/src/run_sql/: main.py
tasks/src/utils/: script.py
tasks/src/utils/extract_data/: extract_opa_properties.py
tasks/src/utils/prepare_data/: prepare_opa_properties.py
tasks/src/utils/run_sql/: load_opa_properties.py
(+6 files in other folders)
